--- a/UE4_DemoProject/DemoProject.uproject
+++ b/UE4_DemoProject/DemoProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.23",
+	"EngineAssociation": "{E1F2D13B-4305-A7AD-984D-B5AFF54E267A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
